# ldcli

./: .gitignore  .goreleaser.grcross.yaml  .goreleaser.yaml  .goreleaser.zig.yaml  .npmignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  BUILD.bazel  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  MODULE.bazel  Makefile  PROVENANCE.md  PULL_REQUEST_DESCRIPTION.md  README.md  \  changelog.md  go.mod  go.sum  ld-openapi.json  ld-teams-openapi.json  main.go  package-lock.json  package.json  release-please-config.json  release-please-config.yml  tools.go
cmd/: BUILD.bazel  cmdtest.go  hello.go  hello_test.go  onboard.go  onboard_test.go  pager.go  projects.go  quickstart.go  resource_cmds.go  resource_cmds_test.go  root.go  root_test.go  setup.go  templates.go  test_list.go  wizard.go
cmd/analytics/: BUILD.bazel  analytics.go  analytics_test.go  known_agents.json
cmd/cliflags/: BUILD.bazel  baseuri.go  flags.go  flags_test.go
cmd/config/: BUILD.bazel  config.go  config_test.go
cmd/config/testdata/: help.golden
cmd/constants/: constants.go
cmd/dev_server/: BUILD.bazel  dev_server.go  flags.go  import_project.go  import_project_test.go  main.go  overrides.go  projects.go  seed.go  seed_test.go  start_server.go  start_server_test.go
cmd/environments/: environments.go  get.go  get_test.go
cmd/evaluate/: context.go  contexts_test.go  evaluate.go  fields.go  fields_test.go
cmd/explain/: explain.go  explain_test.go
cmd/flags/: BUILD.bazel  archive.go  archive_test.go  create.go  create_test.go  flags.go  get.go  get_test.go  toggle.go  toggle_test.go  toggleon.go  update.go  update_test.go  usage.go
cmd/flags/rollouts/: dismiss.go  dismiss_test.go  flags.go  list.go  list_test.go  plaintext.go  rollouts.go  rollouts_test.go  start.go  start_test.go  status.go  status_test.go  stop.go  stop_test.go
cmd/ldcli/: cmdtest.go  quickstart.go  root.go  root_test.go
cmd/ldcli/analytics/: analytics.go
cmd/ldcli/config/: config.go  config_test.go
cmd/ldcli/flags/: archive.go  archive_test.go  toggle.go
cmd/ldcli/login/: login.go
cmd/ldcli/members/: invite.go  invite_test.go
cmd/ldcli/resources/: gen_resources.go  gen_resources_test.go  resource_cmds.go  resource_cmds.tmpl  resource_cmds_test.go  resource_utils.go  resources.go  resources_test.go
cmd/ldcli/validators/: validators.go  validators_test.go
cmd/login/: BUILD.bazel  login.go
cmd/members/: BUILD.bazel  create.go  create_test.go  invite.go  invite_test.go  members.go
cmd/output/: output.go
cmd/projects/: create.go  create_test.go  list.go  list_test.go  projects.go
cmd/resources/: BUILD.bazel  debugging.tmpl  gen_resources.go  gen_resources_test.go  resource_cmds.go  resource_cmds.tmpl  resource_cmds_test.go  resource_utils.go  resources.go  resources_test.go
cmd/resources/test_data/: expected_template_data.json  help.golden  test-openapi.json
cmd/sdk_active/: sdk_active.go  sdk_active_test.go
cmd/setup/: detect.go  init.go  install.go  setup.go  setup_test.go  styles.go  wizard.go  wizard_test.go
cmd/signup/: signup.go  signup_test.go
cmd/sourcemaps/: sourcemaps.go  upload.go  upload_test.go
cmd/symbols/: apple_upload.go  apple_upload_test.go  flutter_upload.go  generate.go  symbols.go  upload.go  upload_test.go
cmd/utils/: utils.go
cmd/validators/: BUILD.bazel  validators.go  validators_test.go
cmd/whoami/: whoami.go  whoami_test.go
internal/analytics/: BUILD.bazel  client.go  client_test.go  event_utils.go  events.go  log_client.go  mock.go  noop_client.go  segmentio.go  tracker.go
internal/config/: BUILD.bazel  config.go  config_service.go  config_test.go
internal/dev_server/: BUILD.bazel  README.md  client.go  dev_server.go  main.go  manifesto.md  mock_client.go  overrides.yaml  using-dev-server.md
internal/dev_server/adapters/: BUILD.bazel  api.go  api_test.go  context.go  middleware.go  sdk.go
internal/dev_server/api/: BUILD.bazel  Makefile  api.yaml  cors.go  cors_test.go  data_mapping.go  delete_debug_session.go  delete_flag_override.go  delete_overrides.go  delete_project.go  error_handlers.go  get_backup.go  get_debug_session_events.go  get_debug_sessions.go  get_environments.go  get_project.go  get_projects.go  oapi-codegen-cfg.yaml  patch_project.go  patch_sync_project.go  post_add_project.go  post_copy_project.go  post_copy_project_test.go  post_import_project.go  put_override_flag.go  restore_backup.go  server.gen.go  server.go
internal/dev_server/db/: BUILD.bazel  docs.go  flagstate_unmarshal.go  sqlite.go  sqlite_overrides.go  sqlite_projects.go  sqlite_test.go  sqllite_backup.go
internal/dev_server/events/: base.go  filter.go  filter_test.go
internal/dev_server/events_db/: docs.go  sqlite.go  sqlite_test.go  testevent.json
internal/dev_server/model/: BUILD.bazel  docs.go  environments.go  err_already_exists.go  err_not_found.go  (+28 more)
internal/environments/: BUILD.bazel  client.go  mock_client.go  outputter.go
internal/errors/: BUILD.bazel  errors.go  errors_test.go  suggestions.go  suggestions_test.go
internal/flags/: BUILD.bazel  client.go  flags.go  flags_test.go  mock_client.go
internal/login/: BUILD.bazel  client.go  client_test.go  login.go  login_test.go
internal/members/: BUILD.bazel  members.go  members_test.go  mock.go
internal/output/: BUILD.bazel  config_outputter.go  config_outputter_test.go  error_outputter.go  markdown.go  markdown_test.go  multiple_outputter.go  multiple_outputter_test.go  output.go  output2.go  output2_test.go  output_test.go  outputters.go  plaintext_fns.go  plaintext_fns_internal_test.go  resource_output.go  resource_output_test.go  singular_outputter.go  singular_outputter_test.go  table.go  table_test.go
internal/projects/: BUILD.bazel  mock.go  projects.go  projects_test.go
internal/quickstart/: BUILD.bazel  choose_sdk.go  container.go  create_flag.go  help.go  messages.go  show_sdk_instructions.go  toggle_flag.go
internal/resources/: BUILD.bazel  client.go  client_test.go  mock_client.go
internal/sdks/: BUILD.bazel  sdks.go  sdks_test.go
(+372 files in other folders)
