module(
    name = "ldcli",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.43.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_adrg_xdg",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_glamour",
    "com_github_charmbracelet_lipgloss",
    "com_github_getkin_kin_openapi",
    "com_github_google_uuid",
    "com_github_gorilla_handlers",
    "com_github_gorilla_mux",
    "com_github_iancoleman_strcase",
    "com_github_launchdarkly_api_client_go_v14",
    "com_github_launchdarkly_go_sdk_common_v3",
    "com_github_launchdarkly_go_server_sdk_v7",
    "com_github_launchdarkly_sdk_meta_api",
    "com_github_mattn_go_sqlite3",
    "com_github_mitchellh_go_homedir",
    "com_github_muesli_reflow",
    "com_github_oapi_codegen_oapi_codegen_v2",
    "com_github_oapi_codegen_runtime",
    "com_github_pkg_browser",
    "com_github_pkg_errors",
    "com_github_samber_lo",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
    "org_golang_x_exp",
    "org_golang_x_term",
    "org_uber_go_mock",
)
