load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "cmdtest.go",
        "quickstart.go",
        "root.go",
        "templates.go",
    ],
    importpath = "github.com/launchdarkly/ldcli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/analytics",
        "//cmd/cliflags",
        "//cmd/config",
        "//cmd/dev_server",
        "//cmd/flags",
        "//cmd/login",
        "//cmd/members",
        "//cmd/resources",
        "//cmd/validators",
        "//internal/analytics",
        "//internal/config",
        "//internal/dev_server",
        "//internal/environments",
        "//internal/errors",
        "//internal/flags",
        "//internal/members",
        "//internal/projects",
        "//internal/quickstart",
        "//internal/resources",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_google_uuid//:uuid",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_term//:term",
    ],
)

go_test(
    name = "cmd_test",
    srcs = ["root_test.go"],
    deps = [
        ":cmd",
        "//internal/analytics",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
