load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "analytics",
    srcs = ["analytics.go"],
    importpath = "github.com/launchdarkly/ldcli/cmd/analytics",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/cliflags",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
    ],
)
