load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "quickstart",
    srcs = [
        "choose_sdk.go",
        "container.go",
        "create_flag.go",
        "help.go",
        "messages.go",
        "show_sdk_instructions.go",
        "toggle_flag.go",
    ],
    importpath = "github.com/launchdarkly/ldcli/internal/quickstart",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/analytics",
        "//internal/environments",
        "//internal/errors",
        "//internal/flags",
        "//internal/sdks",
        "@com_github_charmbracelet_bubbles//help",
        "@com_github_charmbracelet_bubbles//key",
        "@com_github_charmbracelet_bubbles//list",
        "@com_github_charmbracelet_bubbles//spinner",
        "@com_github_charmbracelet_bubbles//textinput",
        "@com_github_charmbracelet_bubbles//viewport",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_glamour//:glamour",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_launchdarkly_sdk_meta_api//sdkmeta",
        "@com_github_muesli_reflow//wordwrap",
        "@org_golang_x_exp//slices",
    ],
)
